<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DashboardLayout"
    android:layout_marginTop="60dp"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/account_userinfo"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#ef4070" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/account_username"
            android:textSize="14sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/account_usrname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="5dp"
            android:text="@string/text_authroise"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/account_name"
            android:textSize="14sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="5dp"
            android:text="@string/text_authroise"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/account_email"
            android:textSize="14sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/account_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="5dp"
            android:text="@string/text_authroise"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/account_tokeninfo"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#ef4070" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/account_userid"
            android:textSize="14sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/account_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="5dp"
            android:text="@string/text_authroise"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/account_expiration"
            android:textSize="14sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/account_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="5dp"
            android:text="@string/text_authroise"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>