<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DashboardLayout"
    android:layout_marginTop="60dp"
    android:padding="5dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/settings_interface"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#ef4070" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription="@string/settings_bluetooth"
                android:paddingLeft="15dp"
                android:scaleType="center"
                android:src="@drawable/bluetooth_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/settings_bluetooth"
                android:textSize="16sp" >
            </TextView>

            <ToggleButton
                android:id="@+id/settings_bluetooth_togglebutton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#ef4070"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/settings_bluetooth_instruction"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription="@string/settings_wifi"
                android:paddingLeft="15dp"
                android:scaleType="center"
                android:src="@drawable/wifi_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/settings_wifi"
                android:textSize="16sp" >
            </TextView>

            <ToggleButton
                android:id="@+id/settings_wifi_togglebutton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#ef4070"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/settings_wifi_instruction"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerHorizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/settings_operating"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#ef4070" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription="@string/settings_battery"
                android:paddingLeft="15dp"
                android:scaleType="center"
                android:src="@drawable/battery_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/settings_battery"
                android:textSize="16sp" >
            </TextView>

            <ToggleButton
                android:id="@+id/settings_battery_togglebutton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#ef4070"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/settings_battery_instruction"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:clickable="false"
                android:contentDescription="@string/settings_energy"
                android:paddingLeft="15dp"
                android:scaleType="center"
                android:src="@drawable/energy_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/settings_energy"
                android:textSize="16sp" >
            </TextView>

            <ToggleButton
                android:id="@+id/settings_energy_togglebutton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#ef4070"
                android:textSize="20sp"
                android:enabled="false"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/settings_energy_awareness_instruction"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>